--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <li><a href="">About</a></li>
       <li><a href="">Products</a></li>
       <li><a href="">Our Team</a></li>
+      <li><a href="">Test Item</a></li>
       <li class="push"><a href="">Contacts</a></li>
     </ul>
   </nav>
