--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="">Products</a></li>
       <li><a href="">Our Team</a></li>
       <li><a href="">Test Item</a></li>
+      <li><a href="">Test Item 2</a></li>
       <li class="push"><a href="">Contacts</a></li>
     </ul>
   </nav>
