--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<div>Done</div>
 
 					<h1 class="subtitle">
-						Biggest startup in aggreculture
+						Biggest startup in agriculture
 					</h1>
 
 
